Created custom cutout shader

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -14,10 +14,11 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "typeRoots": ["./typings.d.ts"],
     "paths": {
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "typings.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
