Added some basic resizing

--- a/turbo.json
+++ b/turbo.json
@@ -11,6 +11,10 @@
     },
     "dev": {
       "cache": false
+    },
+    "start": {
+      "cache": true,
+      "persistent": true
     }
   }
 }
