--- a/turbo.json
+++ b/turbo.json
@@ -4,7 +4,8 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": ["dist/**", ".next/**", "!.next/cache/**"]
+      "outputs": ["dist/**", ".next/**", "!.next/cache/**"],
+      "env": ["VERCEL_ENV", "VERCEL_BRANCH_URL"]
     },
     "lint": {
       "outputs": []
