--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,7 @@
     "build": {
       "dependsOn": ["^build"],
       "outputs": ["dist/**", ".next/**", "!.next/cache/**"],
-      "env": ["VERCEL_ENV", "VERCEL_BRANCH_URL"]
+      "env": ["NEXT_PUBLIC_VERCEL_ENV", "NEXT_PUBLIC_VERCEL_BRANCH_URL"]
     },
     "lint": {
       "outputs": []
