Added basic language intergration

--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "engines": {
     "node": ">=14.0.0"
   },
-  "packageManager": "npm@9.5.1"
+  "packageManager": "npm@9.5.1",
+  "dependencies": {
+    "i18next": "^23.5.1",
+    "next-i18next": "^14.0.3",
+    "react-i18next": "^13.2.2"
+  }
 }
