--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,8 +12,7 @@
     "next": "^13.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.151.3",
-    "ui": "*"
+    "three": "^0.151.3"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
