--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,8 +16,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "@types/node": "^17.0.12",
-    "@types/react": "^18.0.22",
+    "@types/node": "17.0.45",
+    "@types/react": "18.2.24",
     "@types/react-dom": "^18.0.7",
     "@types/three": "^0.150.1",
     "eslint": "7.32.0",
