--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -10,6 +10,9 @@
   },
   "devDependencies": {
     "@types/node": "20.8.0",
-    "@types/react": "18.2.24"
+    "@types/react": "18.2.24",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5"
   }
 }
