--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -14,5 +14,8 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5"
+  },
+  "dependencies": {
+    "emulators": "^0.80.22"
   }
 }
