--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,14 @@
     "build": {
       "dependsOn": ["^build"],
       "outputs": ["dist/**", ".next/**", "!.next/cache/**"],
-      "env": ["NEXT_PUBLIC_VERCEL_ENV", "NEXT_PUBLIC_VERCEL_BRANCH_URL"]
+      "env": [
+        "NEXT_PUBLIC_VERCEL_ENV",
+        "NEXT_PUBLIC_VERCEL_BRANCH_URL",
+        "MAIL_SERVER",
+        "MAIL_PORT",
+        "MAIL_USER",
+        "MAIL_PASS"
+      ]
     },
     "lint": {
       "outputs": []
