--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -12,8 +12,7 @@
     "@types/node": "20.8.0",
     "@types/react": "18.2.24",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5"
+    "postcss": "^8.4.31"
   },
   "dependencies": {
     "emulators": "^0.80.22"
