--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -10,9 +10,7 @@
   },
   "devDependencies": {
     "@types/node": "20.8.0",
-    "@types/react": "18.2.24",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31"
+    "@types/react": "18.2.24"
   },
   "dependencies": {
     "emulators": "^0.80.22"
