--- a/turbo.json
+++ b/turbo.json
@@ -8,6 +8,7 @@
       "env": [
         "NEXT_PUBLIC_VERCEL_ENV",
         "NEXT_PUBLIC_VERCEL_BRANCH_URL",
+        "NEXT_PUBLIC_TARGET_URL",
         "MAIL_SERVER",
         "MAIL_PORT",
         "MAIL_USER",
