--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "devDependencies": {
-    "@types/node": "20.12.7",
-    "@types/react": "18.3.1"
+    "@types/node": "^22.7.6",
+    "@types/react": "^18.3.11"
   },
   "dependencies": {
     "@vercel/analytics": "^1.2.2",
     "ansi-colors": "^4.1.3",
     "ansi-escapes": "^7.0.0",
-    "emulators": "^0.80.22"
+    "emulators": "^8.2.2"
   }
 }
