--- a/packages/rpc/package.json
+++ b/packages/rpc/package.json
@@ -7,10 +7,10 @@
     "lint": "eslint \"**/*.ts*\""
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
+    "eslint": "^9.12.0",
     "eslint-config-custom": "*",
-    "tsconfig": "*",
-    "typescript": "^4.5.2"
+    "tsconfig": "^7.0.0",
+    "typescript": "^5.6.3"
   },
   "author": "",
   "license": "ISC"
