--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Portfolio",
+  "name": "portfolio",
   "version": "0.0.0",
   "private": true,
   "workspaces": [
@@ -21,7 +21,7 @@
     "turbo": "^2.1.3"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=22.0.0"
   },
   "packageManager": "npm@9.5.1",
   "dependencies": {
