Apprently I updated the node version incorrectly :^)
https://vercel.com/docs/functions/runtimes/node-js/node-js-versions#setting-the-node.js-version-in-project-settings

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "turbo": "^2.5.5"
   },
   "engines": {
-    "node": ">=22.0.0"
+    "node": "22.x"
   },
   "packageManager": "npm@11.4.2",
   "dependencies": {
