--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,21 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@vercel/analytics": "^1.5.0",
-    "next": "^15.4.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "three": "^0.178.0"
+    "@vercel/analytics": "^1.6.1",
+    "next": "^16.0.7",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
+    "three": "^0.181.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.0",
-    "@types/node": "^24.1.0",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@types/three": "^0.178.1",
-    "eslint": "^9.31.0",
+    "@babel/core": "^7.28.5",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@types/three": "^0.181.0",
+    "eslint": "^9.39.1",
     "eslint-config-custom": "*",
+    "raw-loader": "^4.0.2",
     "tsconfig": "^7.0.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.9.3"
   }
 }
